Training docs/Assignment8/Trial/src/objects/Name__c.object
<CustomObject>
	<description>It shows the details about the price,description of
		music,total amount.</description>
	<fields>
		<fullName>Bill_Number__c</fullName>
		<description>Gives the Bill No from bill table.</description>
		<inlineHelpText>It reflates the bill No</inlineHelpText>
		<label>Bill Number</label>
		<referenceTo>Bill__c</referenceTo>
		<relationshipLabel>Details</relationshipLabel>
		<relationshipName>Details</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>Inventory_Name__c</fullName>
		<description>Describes the Inventory name</description>
		<inlineHelpText>It shows the Inventory name</inlineHelpText>
		<label>Inventory Name</label>
		<referenceTo>Media__c</referenceTo>
		<relationshipLabel>Details</relationshipLabel>
		<relationshipName>Details</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>User_Email__c</fullName>
		<description>Specifies the Email id of the user.</description>
		<inlineHelpText>it shows the details such as email id.</inlineHelpText>
		<label>User Email</label>
		<type>Email</type>
	</fields>
	<label>Detail</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>User Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Details</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>